Mobile menu overflow/scoll issue solved

--- a/assets/css/_mobile-header-footer.scss
+++ b/assets/css/_mobile-header-footer.scss
@@ -79,7 +79,8 @@
     -webkit-box-flex: 1;
     width: calc(100% - #{$logo-mob-width} - #{$hamburger-mob-width});
     text-align: right;
-    overflow: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
     white-space: nowrap;
 
     .top-menu {
